sbi-manifests/sbi-cms-issuance-batch-scheduler-extn/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-issuance-batch-scheduler-extn
  namespace: sbi
  labels:
    app: sbi-cms-issuance-batch-scheduler-extn
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-issuance-batch-scheduler-extn
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-issuance-batch-scheduler-extn
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": 5299d8ad536eb0778bee960a4ed52ce170de892225cc0b8d3359e4ed532d975e
    spec:
      serviceAccountName: sbi-cms-issuance-batch-scheduler-extn-sa
      volumes:
      containers:
        - name: sbi-cms-issuance-batch-scheduler-extn
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-issuance-batch-scheduler-extn:sbi-uat.v59
          volumeMounts:
          ports:
            - containerPort: 8058
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
