sbi-manifests/sbi-cms-issuance-batch-scheduler-extn/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-issuance-batch-scheduler-extn
  namespace: sbi
  labels:
    app: sbi-cms-issuance-batch-scheduler-extn
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8058-8058'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 8058
      targetPort: 8058
      name: 8058-8058
  selector:
    app: sbi-cms-issuance-batch-scheduler-extn
  type: ClusterIP
